src/test/ui/type-alias-impl-trait/issue-60407.min_tait.stderr
error[E0658]: type alias impl trait is not permitted here
  --> $DIR/issue-60407.rs:9:39
   |
LL | static mut TEST: Option<Debuggable> = None;
   |                                       ^^^^
   |
   = note: see issue #63065 <https://github.com/rust-lang/rust/issues/63065> for more information
   = help: add `#![feature(impl_trait_in_bindings)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
